# tscclangcm

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
src/: Lexer.h  Parser.h  Timer.h  Token.h  casts.h  headers.h  main.cpp
